--- a/package.json
+++ b/package.json
@@ -1,13 +1,54 @@
 {
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "echo \"Tests TODO.\" && exit 1"
+    "build": "cross-env NODE_ENV=production snowpack build",
+    "test": "web-test-runner \"src/**/*.test.js\"",
+    "lint": "eslint --fix src/**/*.svelte src/**/*.js"
   },
   "dependencies": {
-    "@toast-ui/chart": "^4.0.3"
+    "@toast-ui/chart": "^4.0.4",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "snowpack": "^3.0.1"
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@snowpack/app-scripts-svelte": "^1.8.4",
+    "@snowpack/plugin-dotenv": "^2.0.4",
+    "@snowpack/plugin-svelte": "^3.3.0",
+    "@snowpack/web-test-runner-plugin": "^0.1.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/svelte": "^3.0.0",
+    "@web/test-runner": "^0.10.0",
+    "chai": "^4.2.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.19.0",
+    "eslint-config-recommended": "^4.1.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-svelte3": "^3.0.0",
+    "husky": "^4.3.8",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.5.3",
+    "postcss": "^8.2.4",
+    "postcss-import": "^14.0.0",
+    "postcss-load-config": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^1.4.1",
+    "snowpack": "^2.17.1",
+    "stylelint": "^13.9.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recommended": "^3.0.0",
+    "svelte": "^3.32.1",
+    "svelte-preprocess": "^4.1.1",
+    "tailwindcss": "^2.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
