--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Project files
+.vscode
+*.code-workspace
+
+# Mac files
+.DS_Store
+
+# Build files
 .snowpack
 build
+
+# Dependency directories
 node_modules
